--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,13 @@
     <string name="my_attention">我的关注</string>
     <string name="my_fans">我的粉丝</string>
     <string name="str_setting">设置</string>
+    <string name="stage">学习阶段</string>
+    <string name="learn_fromTime">入学时间</string>
+    <string name="oath">穿梭誓言</string>
+    <string name="other_time">TA的时光机</string>
+    <string name="label">个人标签</string>
+    <string name="done">确定</string>
+    <string name="tag_same">标签已存在</string>
+    <string name="tag_max">超过个数限制</string>
+
 </resources>
